# hs-tensor

./: LICENSE  hs-tensor.cabal
lib/: SetMappings.hs
lib/Data/: Permutation.hs  Tensor.hs
lib/Data/Tensor/: Dense.hs  Scheme.hs  Shape.hs  Slice.hs
lib/Data/Tensor/Scheme/: Dense2D.hs  DenseGD.hs
